# test_task_fastapi-redis

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: build-and-test.yml  build.yml
app/: main.py  schemas.py
tests/: test_api.py
