[tool.poetry]
name = "test_task_for_funbox"
version = "0.1.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-builtins = "^1.5.3"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
