[tool.poetry]
name = "test_task_for_funbox"
version = "0.1.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "^2.0.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"


[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-builtins = "^1.5.3"
flake8-import-order = "^0.18.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
